# revector

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md  deny.toml  dist-workspace.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish-crate.yml  qdrant-compat.yml  release.yml  security.yml
docs/: book.toml
docs/demo/: README.md  migration.yaml  revector.tape
docs/src/: SUMMARY.md  install.md  introduction.md  migration-files.md  quick-start.md  tutorial.md
docs/src/guides/: adopting.md  cicd.md  diff.md  model-migration.md  re-embedding.md  state-tracking.md
docs/src/project/: development.md  scope.md  security.md
docs/src/reference/: commands.md  configuration.md  operations.md  specs.md
docs/src/reference/operations/: create_alias.md  create_collection.md  create_payload_index.md  create_sparse_vector.md  create_vector.md  delete_alias.md  delete_collection.md  delete_payload_index.md  delete_vector.md  exec.md  switch_alias.md  update_collection.md
examples/migrations/: 0001_create_products.yaml  0002_index_and_quantize.yaml  0003_add_image_vector.yaml
skills/: README.md
skills/revector/: SKILL.md
src/: chain.rs  cli.rs  client.rs  config.rs  convert.rs  diff.rs  error.rs  exec_hook.rs  executor.rs  lib.rs  main.rs  migration.rs  ops.rs  runner.rs  scaffold.rs  spec.rs  tracking.rs
tests/: integration.rs  logic.rs
